apps/services/n8n/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-server
  labels:
    app: n8n-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n-server
  template:
    metadata:
      labels:
        app: n8n-server
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:0.191.1
          restartPolicy: Always
          ports:
            - name: web
              containerPort: 5678
              protocol: TCP
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "600m"
              memory: "720Mi"
          volumeMounts:
            - name: config-storage
              mountPath: /home/node/.n8n
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: n8n-storage
